--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <a class="nav-link active" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/horario/head.html">Horario Escolar</a>
+                        <a class="nav-link" href="horario/head.html">Horario Escolar</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about/about_us.html">Nosotros</a>
