cambios en index

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                         <a class="nav-link" href="horario/head.html">Horario Escolar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about/about_us.html">Nosotros</a>
+                        <a class="nav-link" href="about/about_us.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news/newuno.html">Noticias</a>
+                        <a class="nav-link" href="news/newuno.html">Noticias</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Oferta educativa</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
-                            <li><a class="dropdown-item" href="/oferta/laboratorista.html">Laboratorista Clínico</a></li>
-                            <li><a class="dropdown-item" href="/oferta/contabilidad.html">Contabilidad</a></li>
-                            <li><a class="dropdown-item" href="/oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
-                            <li><a class="dropdown-item" href="/oferta/electronica.html">Electrónica</a></li>
+                            <li><a class="dropdown-item" href="oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
+                            <li><a class="dropdown-item" href="oferta/laboratorista.html">Laboratorista Clínico</a></li>
+                            <li><a class="dropdown-item" href="oferta/contabilidad.html">Contabilidad</a></li>
+                            <li><a class="dropdown-item" href="oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
+                            <li><a class="dropdown-item" href="oferta/electronica.html">Electrónica</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -227,7 +227,7 @@
                     <h2 class="section-title text-start">Calendario Escolar 2025-2026</h2>
                     <p>Consulte las fechas importantes del ciclo escolar actual, incluyendo periodos de evaluación, vacaciones, eventos especiales y días festivos.</p>
                     <p>Nuestro calendario está diseñado para optimizar el aprendizaje mientras garantizamos un equilibrio entre el trabajo académico y el descanso.</p>
-                    <a href="Calendario DGETI 2025-2026.pdf" class="btn btn-primary mt-3" target="_blank">
+                    <a href="main/Calendario DGETI 2025-2026.pdf" class="btn btn-primary mt-3" target="_blank">
                         <i class="fas fa-download me-2"></i>Descargar Calendario (PDF)
                     </a>
                 </div>
