--- a/horario/head.html
+++ b/horario/head.html
@@ -136,7 +136,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="logo-container">
                         <a href="https://www.gob.mx/sep" target="_blank">
-                            <img src="main/logo_sep.png" alt="Logo 1" class="footer-logo">
+                            <img src="/main/logo_sep.png" alt="Logo 1" class="footer-logo">
                         </a>
                         <a href="https://educacioncampeche.gob.mx" target="_blank">
                             <img src="main/seduc_campeche.png" alt="Logo 1" class="footer-logo">
