--- a/horario/head.html
+++ b/horario/head.html
@@ -7,17 +7,17 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CETIS 20</title>
-    <link rel="icon" href="icono.ico" type="image/x-icon">
+    <link rel="icon" href="main/icono.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="horario/head_style.css?v=0.0.1">
+    <link rel="stylesheet" href="head_style.css?v=0.0.1">
 </head>
 <body>
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
-                <img src="/main/logo.png" alt="CETIS 20" class="img-fluid">
+            <a class="navbar-brand" href="index.html">
+                <img src="main/logo.png" alt="CETIS 20" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
