--- a/horario/head.html
+++ b/horario/head.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CETIS 20</title>
-    <link rel="icon" href="main/icono.ico" type="image/x-icon">
+    <link rel="icon" href="icono.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="head_style.css?v=0.0.1">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
             <a class="navbar-brand" href="../index.html">
-                <img src="main/logo.png" alt="CETIS 20" class="img-fluid">
+                <img src="logo.png" alt="CETIS 20" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -25,25 +25,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="horario/head.html">Horario Escolar</a>
+                        <a class="nav-link active" href="head.html">Horario Escolar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about/about_us.html">Nosotros</a>
+                        <a class="nav-link" href="../about/about_us.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="news/newuno.html">Noticias</a>
+                        <a class="nav-link" href="../news/newuno.html">Noticias</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Oferta educativa</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
-                            <li><a class="dropdown-item" href="oferta/laboratorista.html">Laboratorista Clínico</a></li>
-                            <li><a class="dropdown-item" href="oferta/contabilidad.html">Contabilidad</a></li>
-                            <li><a class="dropdown-item" href="oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
-                            <li><a class="dropdown-item" href="oferta/electronica.html">Electrónica</a></li>
+                            <li><a class="dropdown-item" href="../oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
+                            <li><a class="dropdown-item" href="../oferta/laboratorista.html">Laboratorista Clínico</a></li>
+                            <li><a class="dropdown-item" href="../oferta/contabilidad.html">Contabilidad</a></li>
+                            <li><a class="dropdown-item" href="../oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
+                            <li><a class="dropdown-item" href="../oferta/electronica.html">Electrónica</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -136,10 +136,10 @@
                 <div class="col-lg-4 mb-4">
                     <div class="logo-container">
                         <a href="https://www.gob.mx/sep" target="_blank">
-                            <img src="main/logo_sep.png" alt="Logo 1" class="footer-logo">
+                            <img src="logo_sep.png" alt="Logo 1" class="footer-logo">
                         </a>
                         <a href="https://educacioncampeche.gob.mx" target="_blank">
-                            <img src="main/seduc_campeche.png" alt="Logo 1" class="footer-logo">
+                            <img src="seduc_campeche.png" alt="Logo 1" class="footer-logo">
                         </a>
                     </div>
                 </div>
