--- a/about/about_us.html
+++ b/about/about_us.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CETIS 20</title>
-    <link rel="icon" href="/main/icono.ico" type="image/x-icon">
+    <link rel="icon" href="icono.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="about_us_style.css?v=0.0.1">
@@ -16,9 +16,9 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="/index.html">
+            <a class="navbar-brand" href="../index.html">
                 <!-- Espacio para logotipo -->
-                <img src="/main/logo.png" alt="CETIS 20" class="img-fluid">
+                <img src="logo.png" alt="CETIS 20" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -26,25 +26,25 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/horario/head.html">Horario Escolar</a>
+                        <a class="nav-link" href="../horario/head.html">Horario Escolar</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/about/about_us.html">Nosotros</a>
+                        <a class="nav-link active" href="about_us.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/news/newuno.html">Noticias</a>
+                        <a class="nav-link" href="../news/newuno.html">Noticias</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Oferta educativa</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="/oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
-                            <li><a class="dropdown-item" href="/oferta/laboratorista.html">Laboratorista Clínico</a></li>
-                            <li><a class="dropdown-item" href="/oferta/contabilidad.html">Contabilidad</a></li>
-                            <li><a class="dropdown-item" href="/oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
-                            <li><a class="dropdown-item" href="/oferta/electronica.html">Electrónica</a></li>
+                            <li><a class="dropdown-item" href="../oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
+                            <li><a class="dropdown-item" href="../oferta/laboratorista.html">Laboratorista Clínico</a></li>
+                            <li><a class="dropdown-item" href="../oferta/contabilidad.html">Contabilidad</a></li>
+                            <li><a class="dropdown-item" href="../oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
+                            <li><a class="dropdown-item" href="../oferta/electronica.html">Electrónica</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 mb-4 mb-md-0">
-                    <img src="/about/foto.jpg" alt="Historia CETIS 20" class="img-fluid rounded shadow">
+                    <img src="foto.jpg" alt="Historia CETIS 20" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-md-6">
                     <h2 class="section-title text-start">Nuestro Origen</h2>
@@ -77,7 +77,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="info-box text-center hover-lift">
                         <div class="organigrama-img mb-3">
-                            <img src="/main/directora.jpg" alt="Directora CETIS 20" class="img-fluid rounded-circle">
+                            <img src="directora.jpg" alt="Directora CETIS 20" class="img-fluid rounded-circle">
                         </div>
                         <h4>Dirección</h4>
                         <p>Mtra. Dafné Alejandría Alcocer Zetina</p>
@@ -88,7 +88,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="info-box text-center hover-lift">
                         <div class="organigrama-img mb-3">
-                            <img src="/about/subdirector.jpg" alt="Subdirector Académico CETIS 20" class="img-fluid rounded-circle">
+                            <img src="subdirector.jpg" alt="Subdirector Académico CETIS 20" class="img-fluid rounded-circle">
                         </div>
                         <h4>Subdirección Académica</h4>
                         <p>Lic. Roberto Hernández García</p>
@@ -99,7 +99,7 @@
                 <div class="col-md-4 mb-4">
                     <div class="info-box text-center hover-lift">
                         <div class="organigrama-img mb-3">
-                            <img src="/about/servicios.jpg" alt="Servicios Escolares CETIS 20" class="img-fluid rounded-circle">
+                            <img src="servicios.jpg" alt="Servicios Escolares CETIS 20" class="img-fluid rounded-circle">
                         </div>
                         <h4>Servicios Escolares</h4>
                         <p>Mtro. Javier López Mendoza</p>
@@ -119,7 +119,7 @@
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="egresado-card h-100 p-4">
                         <div class="egresado-img mx-auto mb-3">
-                            <img src="/about/egresado1.jpg" alt="Carlos Mendoza" class="img-fluid">
+                            <img src="egresado1.jpg" alt="Carlos Mendoza" class="img-fluid">
                         </div>
                         <div class="message-container">
                             <p class="message-text">"Mi formación en el CETIS 20 me dio las bases técnicas y humanas para fundar mi propio taller especializado. Hoy empleo a 15 personas y atendemos más de 200 vehículos mensualmente."</p>
@@ -132,7 +132,7 @@
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="egresado-card h-100 p-4">
                         <div class="egresado-img mx-auto mb-3">
-                            <img src="/about/egresado2.jpg" alt="Laura Sánchez" class="img-fluid">
+                            <img src="egresado2.jpg" alt="Laura Sánchez" class="img-fluid">
                         </div>
                         <div class="message-container">
                             <p class="message-text">"Como laboratorista, mi paso por el CETIS 20 fue fundamental. Los conocimientos adquiridos me permitieron obtener una beca para continuar mis estudios en el sector salud."</p>
@@ -145,7 +145,7 @@
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="egresado-card h-100 p-4">
                         <div class="egresado-img mx-auto mb-3">
-                            <img src="/about/egresado3.jpg" alt="Miguel Torres" class="img-fluid">
+                            <img src="egresado3.jpg" alt="Miguel Torres" class="img-fluid">
                         </div>
                         <div class="message-container">
                             <p class="message-text">"La especialidad en Electrónica me abrió las puertas al mundo de la innovación tecnológica. Actualmente dirijo un equipo de desarrollo de dispositivos médicos."</p>
@@ -158,7 +158,7 @@
                 <div class="col-md-6 col-lg-3 mb-4">
                     <div class="egresado-card h-100 p-4">
                         <div class="egresado-img mx-auto mb-3">
-                            <img src="/about/egresado4.jpg" alt="Ana Rodríguez" class="img-fluid">
+                            <img src="egresado4.jpg" alt="Ana Rodríguez" class="img-fluid">
                         </div>
                         <div class="message-container">
                             <p class="message-text">"La formación en Contabilidad me dio las herramientas para emprender con confianza. Hoy atiendo a más de 30 pequeñas y medianas empresas con mi firma de asesoría."</p>
@@ -199,10 +199,10 @@
                 <div class="col-lg-4 mb-4">
                     <div class="logo-container">
                         <a href="https://www.gob.mx/sep" target="_blank">
-                            <img src="/main/logo_sep.png" alt="Logo 1" class="footer-logo">
+                            <img src="logo_sep.png" alt="Logo 1" class="footer-logo">
                         </a>
                         <a href="https://educacioncampeche.gob.mx" target="_blank">
-                            <img src="/main/seduc_campeche.png" alt="Logo 1" class="footer-logo">
+                            <img src="seduc_campeche.png" alt="Logo 1" class="footer-logo">
                         </a>
                     </div>
                 </div>
