--- a/oferta/laboratorista.html
+++ b/oferta/laboratorista.html
@@ -16,7 +16,7 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="../main/index.html">
+            <a class="navbar-brand" href="../index.html">
                 <img src="logo.png" alt="CETIS 20" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="../main/index.html">Inicio</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../horario/head.html">Horario Escolar</a>
@@ -39,11 +39,11 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown">Oferta educativa</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="../oferta/mantenimiento.html">Mantenimiento Automotriz</a></li>
-                            <li><a class="dropdown-item" href="../oferta/laboratorista.html">Laboratorista Clínico</a></li>
-                            <li><a class="dropdown-item" href="../oferta/contabilidad.html">Contabilidad</a></li>
-                            <li><a class="dropdown-item" href="../oferta/alimentos.html">Preparación de Alimentos y Bebidas</a></li>
-                            <li><a class="dropdown-item" href="../oferta/electronica.html">Electrónica</a></li>
+                            <li><a class="dropdown-item" href="mantenimiento.html">Mantenimiento Automotriz</a></li>
+                            <li><a class="dropdown-item" href="laboratorista.html">Laboratorista Clínico</a></li>
+                            <li><a class="dropdown-item" href="contabilidad.html">Contabilidad</a></li>
+                            <li><a class="dropdown-item" href="alimentos.html">Preparación de Alimentos y Bebidas</a></li>
+                            <li><a class="dropdown-item" href="electronica.html">Electrónica</a></li>
                         </ul>
                     </li>
                 </ul>
