--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 </div>
             </div>
             <div class="text-center mt-4">
-                <a href="#" class="btn btn-primary">Ver todos los boletines</a>
+                <a href="news/newuno.html" class="btn btn-primary">Ver todos los boletines</a>
             </div>
         </div>
     </section>
