--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <a class="navbar-brand" href="./">
+            <a class="navbar-brand" href="/CETIS20/">
                 <!-- Espacio para logotipo -->
                 <img src="main/logo.png" alt="CETIS 20" class="img-fluid">
             </a>
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="./">Inicio</a>
+                        <a class="nav-link active" href="/CETIS20/">Inicio</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="horario/head.html">Horario Escolar</a>
